add homepage in package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "notes_react.0",
+  "homepage": "https://vladmodzer.github.io/notes-test-version.git",
   "private": true,
   "version": "0.0.0",
   "type": "module",
