--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "notes_react.0",
-  "homepage": "https://vladmodzer.github.io/notes-test-version.git",
+  "homepage": "https://vladmodzer.github.io/Notes/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
